<resources>
    <string name="app_name">Happy Places</string>
    <string name="Date">Date</string>
    <string name="Description">Description</string>
    <string name="Location">Location</string>
    <string name="addImage">ADD IMAGE</string>
    <string name="save">SAVE</string>
    <string name="title">Title</string>
    <string name="No_records_available_yet">No records available yet</string>
    <string name="google_maps_api_key">AIzaSyCFC84h-Fdn-nz1g3uCHYVhvrVEx3P-Kic</string>
</resources>