<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.addActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/CustonToolBarStyle"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addToolbar"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editText"
            >
           <androidx.appcompat.widget.AppCompatEditText
               android:id="@+id/etTitle"
               android:layout_width="match_parent"
               android:layout_height="@dimen/EditTextHeight"
               android:hint="@string/title"
               android:inputType="text"
               android:textSize="@dimen/editTextSize"
               />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editText"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/EditTextHeight"
                android:hint="@string/Description"
                android:inputType="text"
                android:textSize="@dimen/editTextSize"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editText"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/EditTextHeight"
                android:hint="@string/Date"
                android:inputType="date"
                android:textSize="@dimen/editTextSize"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/editText"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLocation"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="@dimen/EditTextHeight"
                android:hint="@string/Location"
                android:inputType="text"
                android:textSize="@dimen/editTextSize"
                />
        </com.google.android.material.textfield.TextInputLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAddImage"
                android:layout_width="@dimen/imgViewWidth"
                android:layout_height="@dimen/imgViewHeight"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_image_24"/>

            <Button
                android:id="@+id/btnAddImg"
                android:layout_width="@dimen/BtnAddImgWidth"
                android:layout_height="@dimen/BtnAddImgHeight"
                android:layout_marginTop="@dimen/AddImageBtnMarginTop"
                android:text="@string/addImage"
                android:textColor="@color/colorPrimary"
                android:background="@color/white"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/saveBtnMargin"
            android:text="@string/save"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/btnSaveTextSize"
            android:backgroundTint="@color/colorAccent"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>